--- a/pages/PayRoll_html.html
+++ b/pages/PayRoll_html.html
@@ -20,6 +20,15 @@
             </div>
         </div>
     </header>
-    
-</body>
+    <div class="form-content">
+        <form class="form" action="#" onsubmit="save(event);returnfalse">
+            <!--UC 2 -->
+            <div class="form-head">Employee Payroll form</div>
+            <div class="row-content">
+                <abel class="label text" for="name">Name</abel>
+                <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+            </div> 
+        </form>
+    </div>
+    <body>
 </html>
