Added: Code for Adding Event Listner for Name and salary

--- a/pages/PayRoll_html.html
+++ b/pages/PayRoll_html.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payRoll_css.css">
     <title>Employee Payroll Form</title>
-    <script defer src="../js/payRoll_Js.js"></script>
+    <script defer src="../js/payroll_form.js"></script>
 </head>
 <body>
     <!--UC 1 To Create An Employee Payroll System UI-->
@@ -20,13 +20,14 @@
             </div>
         </div>
     </header>
-    <div class="form-content">
-        <form class="form" action="#" onsubmit="save(event);returnfalse">
+    <div id="formId" class="form-content">
+        <form class="form" action="#" onrest="resetForm" onsubmit="save(event)">
             <!--UC 2 -->
             <div class="form-head">Employee Payroll form</div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+                <error-output class="text-error" for="text"></error-output> 
             </div>
             <!-- UC 3 To Specify The Profile Pic in the Form --> 
             <div class="row-content">
@@ -132,6 +133,7 @@
                         <option value="Dec">December</option>
                     </select>
                     <select id="year" name="Year">
+                        <option value="2021">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
                         <option value="2018">2018</option>
