--- a/pages/PayRoll_html.html
+++ b/pages/PayRoll_html.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/payRoll_css.css">
     <title>Employee Payroll Form</title>
     <script defer src="../js/payroll_form.js"></script>
+    <script defer src="../js/EmployeePayroll.js"></script>
 </head>
 <body>
     <!--UC 1 To Create An Employee Payroll System UI-->
