--- a/pages/payrollHome_html.html
+++ b/pages/payrollHome_html.html
@@ -19,6 +19,49 @@
                 <span class="emp-text emp-payroll">PAYROLL</span>
             </div>
         </div>
-    </header>    
+    </header>
+    <div class="main-content">
+        <!-- UC 2 -->
+        <div class="header-content">
+            <div class="emp-detail-text">
+                Employee Details <div class="emp-count">10</div>
+            </div>
+            <a href="../pages/PayRoll_html.html" class="add-button">
+                <img src="../assets/image5.png" width="17%" alt="">Add User</a>
+        </div> <!--header content -->
+        <div class="table-main">
+            <table id="table-display" class="table">
+                <tr>
+                    <th></th>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Department</th>
+                    <th>Salary</th>
+                    <th>Start Date</th>
+                    <th>Actions</th>
+                </tr>
+                <tr>
+                    <td><img class="profile" alt="" src="../assets/image2.jpg">
+                    </td>
+                    <td>Pallavi Krishna</td>
+                    <td>Female</td>
+                    <td>
+                        <div class="dept-label">HR</div>
+                        <div class="dept-label">Finance</div>
+                    </td>
+                    <td>30000</td>
+                    <td>1 NOV 2020</td>
+                    <td>
+                        <img id="1" onclick="remove(this)" alt="delete" src="../assets/image9.png" width="0%">
+                        <img id="1" alt="edit" onclick="update(this)" src="../assets/image8.svg" width="15%">
+                    </td>
+                </tr>
+            </table>
+        </div> <!-- table main -->
+    </div>     <!-- main Content -->
+    <script src="../js/test_home.js"></script>
+    <script src="../js/utility.js"></script>
+    <script src="../js/site_properties.js"></script>
+    <script src="../js/EmployeePayroll.js"></script>
 </body>
 </html>
