Added: Code for Employee Payroll Using Template Literals

--- a/pages/payrollHome_html.html
+++ b/pages/payrollHome_html.html
@@ -31,35 +31,10 @@
         </div> <!--header content -->
         <div class="table-main">
             <table id="table-display" class="table">
-                <tr>
-                    <th></th>
-                    <th>Name</th>
-                    <th>Gender</th>
-                    <th>Department</th>
-                    <th>Salary</th>
-                    <th>Start Date</th>
-                    <th>Actions</th>
-                </tr>
-                <tr>
-                    <td><img class="profile" alt="" src="../assets/image2.jpg">
-                    </td>
-                    <td>Pallavi Krishna</td>
-                    <td>Female</td>
-                    <td>
-                        <div class="dept-label">HR</div>
-                        <div class="dept-label">Finance</div>
-                    </td>
-                    <td>30000</td>
-                    <td>1 NOV 2020</td>
-                    <td>
-                        <img id="1" onclick="remove(this)" alt="delete" src="../assets/image9.png" width="0%">
-                        <img id="1" alt="edit" onclick="update(this)" src="../assets/image8.svg" width="15%">
-                    </td>
-                </tr>
             </table>
         </div> <!-- table main -->
     </div>     <!-- main Content -->
-    <script src="../js/test_home.js"></script>
+    <script src="../js/new_home.js"></script>
     <script src="../js/utility.js"></script>
     <script src="../js/site_properties.js"></script>
     <script src="../js/EmployeePayroll.js"></script>
