--- a/pages/PayRoll_html.html
+++ b/pages/PayRoll_html.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <div id="formId" class="form-content">
-        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save(event)">
             <!--UC 2 -->
             <div class="form-head">Employee Payroll form</div>
             <div class="row-content">
